--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name = "description" content="This is a private flight html project">
 
     <link rel="shortcut icon" href="./favicon.svg" type = "image/svg+xml">
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="style.css">
 
     <!-- font links -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
