--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="preload" as="image" href="images/hero-banner.png">
+    <link rel="preload" as="image" href="hero-banner.png">
 
 </head>
 <body>
@@ -22,12 +22,12 @@
      <header class="header" data-header>
         <div class="container">
             <a href="" class="logo">
-                <img src="./images/logo.png" width="115" height="48" alt="fly logo">
+                <img src="logo.png" width="115" height="48" alt="fly logo">
             </a>
             <nav class="navbar" data-navbar>
                 <div class="navbar-top">
                     <a href="" class="logo">
-                        <img src="./images/logo.png" width="102" height="48" alt="fly logo">
+                        <img src="logo.png" width="102" height="48" alt="fly logo">
                     </a>
                     <button class="nav-close-btn" aria-label="close menu" data-nav-toggler>
                         <ion-icon name="close-outline" aria-hidden="true"></ion-icon>
@@ -78,7 +78,7 @@
                         <a href="readmore.html" class="btn btn-secondary">Read More</a>
                     </div>
 
-                    <img src="images/hero-banner.png" width="1474" height="426" alt="ariplane" class="abs-img">
+                    <img src="hero-banner.png" width="1474" height="426" alt="ariplane" class="abs-img">
 
                 </div>
              </section>
@@ -164,7 +164,7 @@
                     </div>
 
                     <figure class="about-banner img-holder" style="--width: 470; height: 550;">
-                        <img src="./images/about-banner.jpg" width="470" height="550" loading="lazy" alt="about banner" class="img-cover">
+                        <img src="about-banner.jpg" width="470" height="550" loading="lazy" alt="about banner" class="img-cover">
                     </figure>
 
                 </div>
@@ -196,7 +196,7 @@
 
                             <li>
                                 <div class="feature-card has-before has-after img-holder" style="--width: 370; --height: 452;
-                                background-image: url(./images/feature-1.jpg);">
+                                background-image: url(feature-1.jpg);">
                                 <h3 class="h3">
                                     <a href="#" class="card-title">Exclusive <br> Offers</a>
                                 </h3>
@@ -210,7 +210,7 @@
 
                             <li>
                                 <div class="feature-card has-before has-after img-holder" style="--width: 370; --height: 452;
-                                background-image: url(./images/feature-2.jpg);">
+                                background-image: url(feature-2.jpg);">
                                 <h3 class="h3">
                                     <a href="#" class="card-title">Join as <br> Cabin Crew</a>
                                 </h3>
