--- a/booknow.html
+++ b/booknow.html
@@ -8,7 +8,7 @@
     <meta name = "description" content="This is a private flight html project">
 
     <link rel="shortcut icon" href="./favicon.svg" type = "image/svg+xml">
-    <link rel="stylesheet" href="./style/booknow.css">
+    <link rel="stylesheet" href="booknow.css">
 
     <!-- font links -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,7 +21,7 @@
 </head>
 <body>
     <div class="logo">
-        <img src="./images/logo.png" width="115"  alt="fly logo" style="margin-top: 12px; margin-left: 22px;">
+        <img src="logo.png" width="115"  alt="fly logo" style="margin-top: 12px; margin-left: 22px;">
     </div>
 
     <div class="background-image"></div>
