--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
      </main>
 
 
-    <script src="./script/script.js" defer></script>
+    <script src="script.js" defer></script>
 
     <!-- ionicons -->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
