--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                 <!-- offer -->
                  <section class="offer" aria-label="offer">
 
-                    <div class="offer-content section" style="background-image: url(./images/offer-bg.png);">
+                    <div class="offer-content section" style="background-image: url(images/offer-bg.png);">
 
                         <div class="container">
                             <p class="section-subtitle">Special Offers!</p>
@@ -248,7 +248,7 @@
                         </div>
                     </div>
                     
-                    <div class="offer-banner has-bg-image" style="background-image: url(./images/offer-banner.jpg);"></div>
+                    <div class="offer-banner has-bg-image" style="background-image: url(offer-banner.jpg);"></div>
 
                  </section>
 
